Integrate FastMCP server and protocol tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2.9.0",
+  "fastmcp~=2.13.1",
 ]
 
 [project.optional-dependencies]
